<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".nashratbalot.MainActivity" >

    <RelativeLayout
        android:id="@+id/rlMainScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llAd"
        android:background="@drawable/background" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="3.3" >
            </RelativeLayout>

            <ListView
                android:id="@+id/lvScore"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="4"
                android:divider="#d8d6d6"
                android:dividerHeight="0.5dp"
                android:listSelector="@android:color/transparent"
                android:scrollbars="none"
                android:smoothScrollbar="true" >
            </ListView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:src="@drawable/wasla"
                android:scaleType="fitXY"
                android:layout_alignBottom="@+id/ivMainControl"
                android:layout_height="match_parent"/>
            <ImageView
                android:id="@+id/ivMainControl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/app_name"
                android:scaleType="fitStart"
                android:visibility="visible"
                android:src="@drawable/main_control" />

            <ImageView
                android:layout_width="70dp"
                android:src="@drawable/sakka_icon"
                android:layout_alignParentTop="true"
                android:layout_marginTop="90dp"
                android:layout_centerInParent="true"
                android:layout_height="70dp"/>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="2.6" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_alignParentLeft="true"
                        android:orientation="vertical"
                        android:paddingRight="20dp" >

                        <TextView
                            android:id="@+id/tvNameLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:shadowColor="@android:color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:shadowRadius="5"
                            android:fontFamily="@font/geezapro"
                            android:text="@string/text_team_1"
                            android:textColor="@android:color/white"
                            android:textSize="34sp" />

                        <TextView
                            android:id="@+id/tvScoreLeft"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:shadowColor="@android:color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:fontFamily="@font/geezapro"
                            android:shadowRadius="5"
                            android:text="0"
                            android:textColor="@android:color/white"
                            android:textSize="38dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_centerInParent="true"
                        android:layout_alignParentRight="true"
                        android:orientation="vertical"
                        android:paddingLeft="20dp" >

                        <TextView
                            android:id="@+id/tvNameRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:shadowColor="@android:color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:fontFamily="@font/geezapro"
                            android:shadowRadius="5"
                            android:text="@string/text_team_2"
                            android:textColor="@android:color/white"
                            android:textSize="34sp" />

                        <TextView
                            android:id="@+id/tvScoreRight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:shadowColor="@android:color/black"
                            android:shadowDx="2"
                            android:shadowDy="2"
                            android:fontFamily="@font/geezapro"
                            android:shadowRadius="5"
                            android:text="0"
                            android:textColor="@android:color/white"
                            android:textSize="38sp" />
                    </LinearLayout>
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="5.9" >

                <Button
                    android:id="@+id/btnCancelMirror"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@drawable/bg_btn"
                    android:clickable="false"
                    android:text="@string/btn_cancel"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <ImageView
                    android:id="@+id/ivNavigation"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_above="@+id/btnStartNewTurn"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/icon_up" />

                <TextView
                    android:id="@+id/tvDistribution"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/ivNavigation"
                    android:layout_centerHorizontal="true"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:fontFamily="@font/geezapro"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/text_distribution"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:visibility="visible" />

                <EditText
                    android:id="@+id/etInputLeftMirror"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/bg_edittext"
                    android:gravity="center"
                    android:imeOptions="flagNoEnterAction"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textSize="38sp" />

                <EditText
                    android:id="@+id/etInputRightMirror"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@color/bg_edittext"
                    android:gravity="center"
                    android:imeOptions="flagNoEnterAction"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textSize="38sp" />

                <Button
                    android:id="@+id/btnStartNewTurn"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/btn_play"
                    android:contentDescription="@string/app_name"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/btn_start_game"
                    android:textColor="@android:color/white"
                    android:textSize="38sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/btnCalculate"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_btn"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/btn_cancel"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/etInputRight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btnCalculate"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_toRightOf="@+id/btnCalculate"
                    android:background="@color/bg_edittext"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textSize="38sp"
                    android:visibility="invisible" >
                </EditText>

                <EditText
                    android:id="@+id/etInputLeft"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/btnCalculate"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_toLeftOf="@+id/btnCalculate"
                    android:background="@color/bg_edittext"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:padding="8dp"
                    android:textSize="38sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnCalculate"
                    android:layout_width="wrap_content"
                    android:layout_height="75dp"
                    android:layout_above="@+id/btnStartNewTurn"
                    android:layout_centerInParent="true"
                    android:background="@drawable/btn_play"
                    android:contentDescription="@string/app_name"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/btn_start_game"
                    android:textColor="@android:color/white"
                    android:textSize="38sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/btnRevert"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/btnStartNewTurn"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/bg_btn"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/text_retreat"
                    android:textColor="@android:color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5" >

                <Button
                    android:id="@+id/btnNewGame"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/btn_new_game"
                    android:shadowColor="@android:color/black"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="5"
                    android:text="@string/btn_new_game"
                    android:textColor="@android:color/white"
                    android:textSize="22sp" />

                <ImageButton
                    android:id="@+id/ibInfo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/btn_info" />
            </RelativeLayout>
        </LinearLayout>

        <Button
            android:id="@+id/ibRemoveAds"
            android:layout_width="90dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:background="@drawable/btn_remove_ads"
            android:paddingLeft="5sp"
            android:paddingRight="5sp"
            android:shadowColor="@android:color/black"
            android:shadowDx="0"
            android:shadowDy="-1"
            android:text="@string/title_btn_remove_ads"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:visibility="gone" />

        <view
            android:id="@+id/viewKeyboard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            class="com.nashratbaloot.app.nashratbalot.widgets.NumberKeyboardView"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llAd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

    </LinearLayout>

</RelativeLayout>